--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ $dark-blue: hsl(218, 44%, 22%); */
 .attribution {
     font-size: 11px;
     text-align: center;
-   
 }
 
 a {
@@ -25,11 +24,11 @@ body {
     background-color: hsl(212, 45%, 89%);
     height: 100%;
     margin: 0 auto;
-    display: grid;
-    place-items: center;
+
 }
 
 .qr-container {
+    height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +38,9 @@ body {
     text-align: center;
     padding: 20px 20px 40px 20px;
     border-radius: 20px;
-    max-width: 400px;
+    max-width: 375px;
+    display: grid;
+    grid-gap: 20px;
     background-color: hsl(0, 0%, 100%);
 }
 
@@ -47,3 +48,7 @@ body {
     width: 100%;
     border-radius: 20px;
 }
+
+p {font-family: 'Outfit', sans-serif; color:hsl(220, 15%, 55%); font-size: 20px; font-weight: 400; padding: 0 30px 0 30px; text-align: center;}
+
+h1 {font-family: 'Outfit', sans-serif; font-weight: 700;}
